
	PIG-216: Fix streaming to work with commands that use unix pipes (acmurthy
	via gates).

	PIG-207: Fix illustrate command to work in mapreduce mode (shubhamc via
	gates).

    PIG-218: Fixed param generation to work with arbitrary commands

    PIG-220: Fixed definition of parameter name for param substitution

    PIG-151: fixes to code that handles bzip files

    PIG-222: fix build break

    PIG-226: fix for streaming optimization bug (acmurthy via olgan)

    PIG-228: make multiple streaming outputs adhere to spec (acmurthy via olgan)

    PIG-224: fix to error handling code to produce correct error code

	PIG-176: Change bag spilling so that bags below a certain threshold are
	not spilled, thus avoiding proliferation of small files (pi_song via
	gates).

    PIG-227: making load/store function optional in stream input/output spec
    (acmurthy via olgan)

    PIG-215: Cleanup a few dangling ends left by PIG-111 (pi_song via gates).
    
    PIG-229: Proper error handling in case of deserializer failure

    PIG-230: Handling shipment for multiple ship/cache commands (acmurthy via
    olgan)

	PIG-219: Change unit tests to run both local and map reduce modes (kali via gates).

	PIG-202: Fix Order by so that user provided comparator func is used for quantile determination (kali via gates).

    PIG-231: validation for ship, cache, and skippath  (acmurthy via olgan)

    PIG-232: fix for number of output records when BinaryStirage is used
    (acmurthy via olgan)

    PIG-232: fix for number of input records when BinaryStirage is used
    (acmurthy via olgan)

    PIG-232: let valid cache specifications through (acmurthy via olgan)

    PIG-237: validation of the output directory (pi_song via olgan)

    PIG-236: Fix properties so that values specified via the command line (-D) are not ignored (pkamath via gates).

    PIG-198: integration with hadoop 17

    PIG-85: allowing control characters as delimiters for PigStorage